# biteopt

./: .gitmodules  biteopt.cabal  biteopt.cxx  notes.txt  test.hs
source/: test.hs
source/Foreign/: Utilities.hs
source/Numeric/: Biteopt.hs
tests/: test.hs
wrapper/: biteopt.cxx
