cabal-version:       2.4

name:                biteopt
version:             0.1
author:              Julian Brunner
build-type:          Simple

common configuration
  default-language:    Haskell2010
  ghc-options:         -O2 -fllvm -Wno-unsupported-llvm-version -pgmlg++

library
  import:              configuration
  hs-source-dirs:      source
  exposed-modules:     Numeric.Biteopt
  cxx-sources:         biteopt.cxx
  build-depends:       base

executable test
  import:              configuration
  hs-source-dirs:      source
  main-is:             test.hs
  build-depends:       base, biteopt
