cabal-version:       2.4

name:                biteopt
version:             0.1
author:              Julian Brunner
build-type:          Simple

common configuration
  default-language:    Haskell2010
  ghc-options:         -O2 -fllvm -Wno-unsupported-llvm-version -pgmlg++

library
  import:              configuration
  hs-source-dirs:      source
  cxx-sources:         biteopt.cxx
  exposed-modules:     Numeric.Biteopt
  other-modules:       Foreign.Utilities
  build-depends:       base, mtl

executable test
  import:              configuration
  main-is:             test.hs
  build-depends:       base, splitmix, biteopt
