cabal-version:       2.4

name:                biteopt
version:             0.1
author:              Julian Brunner
build-type:          Simple

common configuration
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-name-shadowing -Wunused-packages
  ghc-options:         -O2 -pgml g++ -pgml-supports-no-pie
  ghc-options:         -fmax-worker-args=16
  ghc-options:         -fllvm -pgmlc llc-14 -pgmlo opt-14 -optlo-O3 -Wno-unsupported-llvm-version

library
  import:              configuration
  hs-source-dirs:      source
  include-dirs:        biteopt
  cxx-sources:         wrapper/biteopt.cxx
  exposed-modules:     Numeric.Biteopt
  other-modules:       Foreign.Utilities
  build-depends:       base, mtl

executable test
  import:              configuration
  ghc-options:         -threaded -with-rtsopts=-N
  hs-source-dirs:      tests
  main-is:             test.hs
  build-depends:       base, parallel, splitmix, biteopt
